# kivi-rs

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile-dind  LICENSE  README.MD  consulboot.sh  docker-compose.yml  etcdboot.sh
composecfg/: kv_dump.json  server-acl.json
composecfg/certs/: consul-agent-ca.pem  dc1-client-consul-0-key.pem  dc1-server-consul-0-key.pem
docker-config/: client.json  server.json
docker-config/certs/: consul-agent-ca-key.pem  dc1-client-consul-0.pem  dc1-server-consul-0.pem
exec/: consulboot.sh  etcdboot.sh
src/: cli_def.rs  consul_remote.rs  consul_source.rs  etcd_remote.rs  http_ext.rs  kv_commons.rs  kvsource.rs  lib.rs  main.rs  utils.rs
tests/: utils_test.rs
